# opensearch-migrations

./: .gitignore  CLAUDE.md
.claude/: settings.local.json
.github/workflows/: CI.yml
AIAdvisor/: .cursorrules  .gitignore  CLAUDE.md  DEMO-RUNBOOK-mini.md  DEMO-RUNBOOK.md  GEMINI.md
AIAdvisor/.github/: copilot-instructions.md
AIAdvisor/cursor/: stub.md
AIAdvisor/services/: README.md
AIAdvisor/solr-opensearch-migration-advisor/: .gitignore  MERGING.md  README.md  SKILL.md  pyproject.toml
AIAdvisor/solr-opensearch-migration-advisor/.kiro/settings/: mcp.json
AIAdvisor/solr-opensearch-migration-advisor/cursor/.cursor-plugin/: marketplace.json
AIAdvisor/solr-opensearch-migration-advisor/cursor/plugins/solr-to-opensearch-migration/: README.md
AIAdvisor/solr-opensearch-migration-advisor/cursor/plugins/solr-to-opensearch-migration/.cursor-plugin/: plugin.json
AIAdvisor/solr-opensearch-migration-advisor/kiro/solr-to-opensearch-migration/: POWER.md  README.md
AIAdvisor/solr-opensearch-migration-advisor/references/: 01-strategic-guidance.md  02-pre-migration.md  03-target-design.md  04-migration-execution.md  05-validation-cutover.md  07-platform-integration.md  08-edge-cases-and-gotchas.md  README.md  aws-opensearch-service.md  consulting-methodology.md  migration-strategy.md  scenario-drupal.md
AIAdvisor/solr-opensearch-migration-advisor/scripts/: mcp_server.py  query_converter.py  report.py  schema_converter.py  skill.py
AIAdvisor/solr-opensearch-migration-advisor/tests/unit/: test_mcp_server.py  test_skill.py  test_storage.py
kiro-cli/: README.md
(+508 files in other folders)
